Bug fix: ruby files with spaces in the path can now be opened in the external editor (at least on OS X, need to test Windows)